# docu-dev

./: .gitignore  README.md  SIMPLE_PROFILE_FIX.md  docker-compose.staging.yml  render.yaml  setup.sh  start_dev.sh
.github/workflows/: staging.yml
backend/: .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  README_AUTHENTICATION.md  README_REORGANIZATION.md  USERPROFILE_ENHANCEMENT_PLAN.md  autofix.sh  create_user.py  crud.py  database.py  format.sh  insert_template.py  main.py  models.py  package-lock.json  package.json  pdf_generator.py  project_sheet_template.html  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_media.txt  schemas.py  setup-dev.sh  simple_resume_template.html  start.sh  start_backend.sh
backend/alembic/: env.py
backend/alembic/versions/: 0764dfead891_add_generated_content_to_project_sheets.py  132ef6a8f08d_add_multiple_description_fields_to_.py  20250807_01_add_profiles_projects_media.py  2c51599e6a82_sync_user_profile_models.py  41ce070845ae_initial_schema_complete_application_.py  4e9c726ba490_add_project_sheet_fields.py  6c7fd8779d33_add_projectsheet_model_for_document_.py  736e42b0192f_enhance_user_profile_with_comprehensive_.py  7ccfae525276_add_media_type_field_for_categorization.py  93e7d42d79c6_make_proposal_optional_in_resume.py  c81ca3584abe_add_json_fields_for_skills_.py  custom_media_migration.py
backend/migrations/: add_media_simplified.sql  add_media_support.sql
backend/routers/: ai.py  auth.py  clients.py  experiences.py  media.py  project_sheets.py  projects.py  proposals.py  resumes.py  templates.py  user_profiles.py
backend/routes/: media.py  media_routes.py
backend/services/: ai_service.py  auth_service.py  cloudinary_service.py  pdf_processor.py  resume_variable_resolver.py  storage_service.py  template_service.py
backend/templates/: README.md  default_resume_template.html  project_sheet_template.html  resume_template.html  resume_template_backup.html  simple_resume_template.html
backend/utils/: media.py
frontend/: .gitignore  .yarnrc  Dockerfile  LINTING_SETUP.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  render.yaml  server.js  vite.config.js
frontend/public/: serve.json
frontend/scripts/: post-build.cjs
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: Confirm.jsx  ExperienceSelectionTab.jsx  InlineEdit.css  InlineEdit.jsx  MediaGallery.css  MediaGallery.jsx  MediaPicker.css  MediaPicker.jsx  MediaUpload.css  MediaUpload.jsx  MobileResumeList.css  MobileResumeList.jsx  MobileTabNavigation.css  MobileTabNavigation.jsx  Modal.css  Modal.jsx  PersonalizeContentTab.css  PersonalizeContentTab.jsx  ProjectPicker.css  ProjectPicker.jsx  ReorderModal.css  ReorderModal.jsx  ResumeEditorTab.css  ResumeEditorTab.jsx  ResumeListTab.jsx  Sidebar.jsx  Tabs.css  Tabs.jsx  Toast.css  (+4 more)
plan/: decisions.md  initial_plan.md  tasks.md
(+32 files in other folders)
