[tool.poetry]
name = "documaker-backend"
version = "0.1.0"
description = "Documaker Backend API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.17.1"
autoflake = "^2.3.1"
autopep8 = "^2.3.2"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | alembic
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120 
known_first_party = ["documaker"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    ".venv", 
    "__pycache__",
    "migrations",
    "alembic",
    "build",
    "dist",
    "*.egg-info"
]
max-complexity = 10
statistics = true
count = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
