[project]
name = "documaker-backend"
version = "0.1.0"
description = "Documaker Backend API"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.7",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.1.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.2",
    "python-dotenv>=1.0.0",
    "weasyprint>=60.0",
    "supabase>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "flake8>=7.3.0",
    "mypy>=1.17.1",
    "autoflake>=2.3.1",
    "autopep8>=2.3.2",
]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | alembic
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120 
known_first_party = ["documaker"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    ".venv", 
    "__pycache__",
    "migrations",
    "alembic",
    "build",
    "dist",
    "*.egg-info"
]
max-complexity = 10
statistics = true
count = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
